--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gradio/client": "^2.0.1",
+    "@supabase/supabase-js": "^2.89.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "recharts": "^2.10.3",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
     "@types/node": "^20",
